# collective.es.index

./: .gitignore  .travis.yml  CHANGES.rst  ENFOLD.txt  LICENSE.rst  README.rst  TODO.rst  bootstrap.sh  buildout.cfg  requirements.txt  setup.cfg  setup.py
docs/: index.rst
src/collective/es/index/: __init__.py  component.xml  components.py  configure.zcml  esproxyindex.py  eswriter.py  faceted.pt  faceted.py  interfaces.py  mappings.py  queueprocessor.py  searchabletextindex.py  setuphandlers.py  tasks.py  testing.py  upgrades.py  upgrades.zcml  utils.py
src/collective/es/index/browser/: configure.zcml
src/collective/es/index/locales/: update.sh
src/collective/es/index/profiles/default/: browserlayer.xml  catalog.xml  componentregistry.xml
src/collective/es/index/profiles/uninstall/: browserlayer.xml
src/collective/es/index/tests/: test_proxyindex.py  test_robot.py  test_setup.py
src/collective/es/index/tests/robot/: test_example.robot
src/collective/es/index/www/: addIndex.zpt  manageIndex.zpt
